--- a/src/main/resources/resources/css/layout.css
+++ b/src/main/resources/resources/css/layout.css
@@ -15,7 +15,7 @@
 
 /* 01.Common Styles */
 
-*{
+* {
     /*border: 1px dotted red;*/
 }
 
@@ -69,6 +69,7 @@
     align-items: center;
 }
 
+
 /* 02.Home */
 
 .info {
@@ -98,49 +99,52 @@
     justify-content: space-around;
 }
 
+
 /* 03.Education */
+
 .edu {
     grid-column: 4 / 10;
-    grid-row: 8 / 12;
+    grid-row: 8 / 16;
     place-self: center;
 }
+
 
 /* 04.Interest */
 
 .interest {
     grid-column: 3 / 11;
-    grid-row: 8 / 12;
+    grid-row: 9 / 16;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
 }
 
+
 /* 05.Pet */
 
-.intro-ziye {
-    grid-column: 3 / 6;
-    grid-row: 8 / 12;
+.ziye-img {
+    grid-column: 3 / 5;
+    grid-row: 9 / 16;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ziye-intro {
+    grid-column: 5 / 8;
+    grid-row: 9 / 16;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-/* dupicate */
-.intro-container {
-    margin: 0;
-}
-
-.moment {
-    grid-column: 6 / 11;
-    grid-row: 8 / 12;
+.ziye-video {
+    grid-column: 8 / 11;
+    grid-row: 9 / 16;
     display: flex;
     justify-content: center;
-}
-
-.moment-container {
-    height: 100%;
-    width: 100%;
+    align-items: center;
 }
 
 
@@ -148,21 +152,24 @@
 
 .app {
     grid-column: 3 / 11;
-    grid-row: 4 / 12;
+    grid-row: 4 / 16;
     display: flex;
     flex-direction: column;
-    border: 1px solid blue;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .guess {
     display: flex;
     justify-content: center;
-    align-items: center;
-
 }
+
 .raise {
     display: flex;
+}
+
+.tips {
+    display: flex;
+    flex-direction: column;
     justify-content: space-around;
 }
 
