--- a/src/main/resources/resources/css/style.css
+++ b/src/main/resources/resources/css/style.css
@@ -45,12 +45,12 @@ a:link {
 }
 
 a:visited {
-  color: lightsteelblue;
+    color: steelblue;
 }
 
 a:hover {
-  color: salmon;
-  background-color: transparent;
+    color: salmon;
+    background-color: transparent;
 }
 
 nav ul {
@@ -174,11 +174,12 @@ footer {
     background-color: #fcfbfe;
 }
 
+
 /* 04.Interest */
 
 .interest-container {
-    width: 300px;
-    height: 210px;
+    width: 350px;
+    height: 260px;
     position: relative;
 }
 
@@ -186,7 +187,7 @@ footer {
     display: block;
     width: 100%;
     height: 100%;
-
+    border-radius: 10px;
 }
 
 .interest-overlay {
@@ -199,16 +200,14 @@ footer {
     right: 0;
     opacity: 0;
     transition: .5s ease;
-    background-color: powderblue;
-
-    border: 1px solid blue;
+    background-color: lightblue;
+    border-radius: 10px;
 }
 
 .interest-container:hover .interest-overlay {
     cursor: pointer;
     opacity: 1;
 }
-
 
 .interest-overlay {
     display: flex;
@@ -217,55 +216,113 @@ footer {
 }
 
 .interest-text {
+    font-size: 1.8em;
+    font-weight: 600;
     color: white;
-    font-size: 1.5em;
-    /*transform: translate(-50%, -50%);*/
-    /*-ms-transform: translate(-50%, -50%);*/
 }
+
 
 /* 05.Pet */
 
-.app h1 {
-    font-size: 1.5em;
-    font-weight: 700;
-    padding: 40px;
+.ziye-img, .ziye-video{
+    margin: 30px 30px 30px 0;
+    border-radius: 10px;
+    background: #fff1f3;
 }
 
-.app p {
-    font-size: 1em;
+.ziye-img img {
+    width: 75%;
+    height: auto;
+}
+
+.ziye-video {
+    margin: 30px 0 30px 30px;
+}
+
+.ziye-video video {
+    width: 85%;
+    height: auto;
+}
+
+.ziye-intro h2 {
+    font-size: 1.3em;
     font-weight: 600;
+    margin: 0 10px;
     padding: 10px;
-    color: #fcfbfe;
-    background-color: #bdcfef;
+    color: steelblue;
+    background: #fefee1;
+    border-radius: 10px;
+}
+
+.ziye-intro p {
+    margin: 0 15px;
+    text-align: justify;
+}
+
+.ziye-intro ul {
+    list-style-type: circle;
+}
+
+
+/* 05.PetAdopt */
+
+.guess {
+    border-radius: 10px;
+    background: #fefee1;
+}
+.guess h1{
+    font-size: 1.5em;
+    font-weight: 600;
+    color: steelblue;
 }
 
 .raise img {
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
     cursor: crosshair;
 }
 
-.raise ol {
-    margin-left: 30%;
-    text-align: left;
-    justify-content: center;
+.tips {
+    margin: 0 20px;
+    border-radius: 10px;
+    background: #fff1f3;
+}
+
+.tips p {
+    font-size: 1.2em;
+    font-weight: 600;
+    margin: 20px 10px 0 10px;
+    padding: 10px;
+    color: salmon;
+    background: #ffdae0;
+    border-radius: 10px;
+}
+
+.tips ol li {
+    padding: 10px;
+}
+
+.tips a {
+    font-weight: 500;
+    margin: 0 10px 20px 10px;
 }
 
 .adopt button {
-    color: #fcfbfe;
-    background-color: #ada2df;
-    font-family: "Rockwell", Georgia, serif;
-    font-size: 24px;
+    font-size: 1.3em;
+    font-weight: 600;
     border: none;
     border-radius: 12px;
     padding: 12px 100px;
-    transition-duration: 0.4s;
+    transition-duration: 0.3s;
     cursor: pointer;
-    display: block;
-    margin: 0 auto;
+    color: #fcfbfe;
+    background-color: lightblue;
 }
 
 .adopt button:hover {
-    color: #9c8fd6;
-    background-color: #fcfbfe;
+    color: skyblue;
+    background-color: white;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
