--- a/src/main/resources/resources/css/layout.css
+++ b/src/main/resources/resources/css/layout.css
@@ -15,10 +15,6 @@
 
 /* 01.Common Styles */
 
-* {
-    /*border: 1px dotted red;*/
-}
-
 .grid-container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -28,13 +24,11 @@
     align-content: center;
     justify-items: stretch;
     align-items: stretch;
-
-    border: 1px solid green;
 }
 
 .item {
     /*background: #bdcfef;*/
-    /*display: flex;*/
+    /*border: 1px solid red;*/
 }
 
 .header {
@@ -95,7 +89,6 @@
 .intro-container {
     display: flex;
     flex-direction: column;
-    /*align-content: space-around;*/
     justify-content: space-around;
 }
 
@@ -104,15 +97,20 @@
 
 .edu {
     grid-column: 3 / 11;
-    grid-row: 9 / 11;
+    grid-row: 7 / 13;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.separation-top {
+    grid-column: 3 / 11;
+    grid-row: 4 / 7;
+}
+
 .separation-bottom {
     grid-column: 3 / 11;
-    grid-row: 11 / 16;
+    grid-row: 13 / 16;
 }
 
 
@@ -125,6 +123,12 @@
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+}
+
+.interest-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -160,9 +164,13 @@
 .app {
     grid-column: 3 / 11;
     grid-row: 4 / 16;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
+    border: 1px solid red;
 }
 
 .guess {
@@ -172,6 +180,12 @@
 
 .raise {
     display: flex;
+}
+
+.raise-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .tips {
