--- a/src/main/resources/resources/css/login.css
+++ b/src/main/resources/resources/css/login.css
@@ -1,3 +1,10 @@
+/*
+* -----------------------------------
+*  CSS Styles for Login Page
+*  Author: Jingtian Zou
+* -----------------------------------
+*/
+
 /* default font-size is 16px, 1em = 16px, px/16 = em */
 
 body {
@@ -142,16 +149,23 @@ span.msg {
 }
 
 span.psw {
-    font-size: 0.8em;
+    font-size: 0.9em;
     float: right;
     padding-top: 12px;
     cursor: pointer;
 }
 
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
+span.psw:hover {
+    color: #e74d6c;
 }
 
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: zoom 0.6s;
+    animation: zoom 0.6s
+}
 
+@keyframes zoom {
+    from {transform: scale(0)}
+    to {transform: scale(1)}
+}
