--- a/src/main/resources/resources/css/style.css
+++ b/src/main/resources/resources/css/style.css
@@ -18,12 +18,9 @@ html, body {
     font-size: 100%;
     height: 100%;
     min-height: 100%;
-    min-width: 1980px;
+    min-width: 1440px;
     padding: 0;
     margin: 0;
-
-    border: 1px solid blue;
-    overflow: auto;
 }
 
 body {
@@ -81,6 +78,7 @@ nav ul li a.active::before {
 }
 
 .separation img,
+.separation-top img,
 .separation-bottom img {
     height: 100%;
     width: 100%;
@@ -89,8 +87,7 @@ nav ul li a.active::before {
 
 footer {
     border-radius: 10px;
-    background: #d4ebf2;
-    /*background: #c1e1ec;*/
+    background: #c9e9f6;
 }
 
 
@@ -100,6 +97,9 @@ footer {
     margin: 30px 0;
     border-radius: 10px;
     background: #fff1f3;
+    overflow: hidden;
+    animation-name: slidein;
+    animation-duration: 3s;
 }
 
 .info img {
@@ -112,6 +112,9 @@ footer {
 
 .intro {
     margin: 20px 0 20px 20px;
+    overflow: hidden;
+    animation-name: slidein;
+    animation-duration: 3s;
 }
 
 .intro h2 {
@@ -129,24 +132,40 @@ footer {
     text-align: justify;
 }
 
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
+}
 
 /* 03.Education */
 
 .edu-btn {
     font-size: 1.5em;
     font-weight: 600;
-    color: #fcfbfe;
-    background-color: #cec8ec;
+    padding: 20px 100px;
     border: none;
     border-radius: 12px;
-    padding: 15px 100px;
+    color: #fcfbfe;
+    background: #9dd7ef;
     transition-duration: 0.3s;
     cursor: pointer;
+    animation: rotate 5s ease 1 alternate;
+}
+
+@keyframes rotate {
+    50% {transform: rotate(180deg);}
 }
 
 .edu-btn:hover {
-    color: #ada2df;
-    background-color: #fcfbfe;
+    color: #85b9da;
+    background: #fcfbfe;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -163,24 +182,24 @@ footer {
 }
 
 .edu-table th {
-    background-color: #fefee1;
+    background: #85b9da;
     color: white;
 }
 
 .edu-table tr {
-    background-color: #d8d2f7;
+    background: #b3e0f2;
 }
 
 .edu-table tr:hover {
-    background-color: #fcfbfe;
+    background: #fefee1;
 }
 
 
 /* 04.Interest */
 
 .interest-container {
-    width: 350px;
-    height: 260px;
+    width: 300px;
+    height: 220px;
     position: relative;
 }
 
@@ -228,7 +247,15 @@ footer {
 .ziye-img, .ziye-video{
     margin: 30px 30px 30px 0;
     border-radius: 10px;
-    background: #fff1f3;
+    animation: changecolor 5s infinite;
+}
+
+@keyframes changecolor {
+    0%   {background: #ffdae0;}
+    25%  {background: #fefee1;}
+    50%  {background: #c9e9f6;}
+    75%  {background: #cfd9e8;}
+    100% {background: #ffdae0;}
 }
 
 .ziye-img img {
@@ -275,17 +302,45 @@ footer {
     font-size: 1.5em;
     font-weight: 600;
     color: steelblue;
+    animation-name: zoomin;
+    animation-duration: 3s;
 }
 
-.raise img {
+@keyframes zoomin {
+    from {
+        margin-left: 90%;
+        width: 300%;
+    }
+
+    50% {
+        font-size: 200%;
+        margin-left: 25%;
+        width: 150%;
+    }
+
+    to {
+        margin-left: 10%;
+        width: 100%;
+    }
+}
+
+.raise-img {
     width: 300px;
-    height: 400px;
+    height: 380px;
+    margin: 0 10px;
+    border-radius: 10px;
+    background: #c9e9f6;
+}
+
+.raise-img img {
+    width: 80%;
+    height: 80%;
     border-radius: 10px;
     cursor: crosshair;
 }
 
 .tips {
-    margin: 0 20px;
+    margin: 0 10px;
     border-radius: 10px;
     background: #fff1f3;
 }
@@ -318,7 +373,7 @@ footer {
     transition-duration: 0.3s;
     cursor: pointer;
     color: #fcfbfe;
-    background-color: lightblue;
+    background-color: #9dd7ef;
 }
 
 .adopt button:hover {
@@ -337,7 +392,7 @@ footer {
 
 .contact-title, .message-title, .board-title {
     font-weight: 700;
-    color: steelblue;
+    color: skyblue;
 }
 
 .contact-title, .contact-item, .board-title {
@@ -407,7 +462,6 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    /*color: #9c8fd6;*/
     background-color: #ffdae0;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
