--- a/src/main/resources/resources/css/style.css
+++ b/src/main/resources/resources/css/style.css
@@ -98,8 +98,19 @@ footer {
     border-radius: 10px;
     background: #fff1f3;
     overflow: hidden;
-    animation-name: slidein;
-    animation-duration: 3s;
+    animation: slidein 3s;
+}
+
+@keyframes slidein {
+    from {
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to {
+        margin-left: 0%;
+        width: 100%;
+    }
 }
 
 .info img {
@@ -132,18 +143,6 @@ footer {
     text-align: justify;
 }
 
-@keyframes slidein {
-    from {
-        margin-left: 100%;
-        width: 300%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-
 /* 03.Education */
 
 .edu-btn {
@@ -156,17 +155,19 @@ footer {
     background: #9dd7ef;
     transition-duration: 0.3s;
     cursor: pointer;
-    animation: rotate 5s ease 1 alternate;
-}
 
-@keyframes rotate {
-    50% {transform: rotate(180deg);}
 }
 
 .edu-btn:hover {
     color: #85b9da;
     background: #fcfbfe;
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+    animation: rotate 1s linear infinite;
+}
+
+@keyframes rotate {
+    25% {transform: rotate(8deg);}
+    75% {transform: rotate(-8deg);}
 }
 
 .edu-table {
@@ -302,8 +303,7 @@ footer {
     font-size: 1.5em;
     font-weight: 600;
     color: steelblue;
-    animation-name: zoomin;
-    animation-duration: 3s;
+    animation: zoomin 3s;
 }
 
 @keyframes zoomin {
@@ -313,7 +313,7 @@ footer {
     }
 
     50% {
-        font-size: 200%;
+        font-size: 250%;
         margin-left: 25%;
         width: 150%;
     }
